<resources>
    <string name="app_name">ManageStorePhone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sell">Bán hàng</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_goods">Hàng hóa</string>
    <string name="menu_history">Lịch sử</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="menu_customer">Khách hàng</string>
    <string name="preLoginState">Loginstate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_product">ViewProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_detailed">DetailedActivity</string>

    <string name="addImage"><u>Thêm ảnh</u></string>
    <string name="updateImage"><u>Sửa ảnh</u></string>
    <string name="addImageCus"><u>Thêm ảnh đại diện</u></string>

</resources>