<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_sell"
            android:title="@string/menu_sell" />
        <item
            android:id="@+id/nav_goods"
            android:icon="@drawable/ic_bag"
            android:title="@string/menu_goods" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_customer"
            android:title="@string/menu_customer" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />

    </group>
</menu>