<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.managestorephone.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sell"
        android:name="com.example.managestorephone.ui.sell.SellFragment"
        android:label="@string/menu_sell"
        tools:layout="@layout/fragment_sell" />

    <fragment
        android:id="@+id/nav_goods"
        android:name="com.example.managestorephone.ui.goods.ProductsFragment"
        android:label="@string/menu_goods"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.example.managestorephone.ui.customer.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.managestorephone.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment

        android:id="@+id/nav_list_search_product"
        android:name="com.example.managestorephone.ui.sell.ListSearchProductFragment"
        android:label="Chọn Sản Phẩm"
        tools:layout="@layout/fragment_list_search_product" />


</navigation>